# android-binder

./: .gitmodules  CMakeLists.txt  LICENSE  build_aidl.sh  main.cc
aidl/include/android/content/pm/: ApexStagedEvent.h  BnPackageManagerNative.h  BnStagedApexInfo.h  BnStagedApexObserver.h  BpPackageManagerNative.h  BpStagedApexInfo.h  BpStagedApexObserver.h  IPackageManagerNative.h  IStagedApexObserver.h  StagedApexInfo.h
aidl/include/android/os/: BnAccessor.h  BnClientCallback.h  BnServiceCallback.h  BnServiceManager.h  BpAccessor.h  BpClientCallback.h  BpServiceCallback.h  BpServiceManager.h  ConnectionInfo.h  IAccessor.h  IClientCallback.h  IServiceCallback.h  IServiceManager.h  Service.h  ServiceDebugInfo.h  ServiceWithMetadata.h
aidl/src/android/content/pm/: ApexStagedEvent.cpp  IPackageManagerNative.cpp  IStagedApexObserver.cpp  StagedApexInfo.cpp
aidl/src/android/os/: ConnectionInfo.cpp  IAccessor.cpp  IClientCallback.cpp  IServiceCallback.cpp  IServiceManager.cpp  Service.cpp  ServiceDebugInfo.cpp  ServiceWithMetadata.cpp
libvndksupport/: linker.cpp
patches/: fix_android15_and_below.patch
